tooling/nargo_cli/tests/snapshots/execution_success/regression_9303/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[regression_9303] Circuit output: (0x30644e72e131a029b85045b68181585d2833e84879b9709143e1f593f0000000, 1)
